[NAE-2085] Refactor User
- running application